[package]
name = "codeonly"
version = "1.1.0"
authors = ["Lenni Hein <git@lennihein.com>"]
edition = "2018"
description = "Remove annoying comments from your code"
readme = "README.md"
license = "GPL-2.0"
homepage = "https://github.com/LostInTheCloud/codeonly"
repository = "https://github.com/LostInTheCloud/codeonly"

[dependencies]
